[package]
name = "onedrive-podcast"
version = "0.1.0"
edition = "2021"

[dependencies]
base64-url = "1.4.13"
base64 = "0.13.0"
quick-xml = "0.22.0"
thiserror = "1.0.30"
anyhow = "1.0.56"
tower = "0.4.12"
axum = { version = "0.4.8" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }