[package]
name = "onedrive-podcast"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
url = "2.2.2"
base64-url = "1.4.13"
base64 = "0.13.0"
serde_json = "1.0.79"
reqwest = { version = "0.11" , default-features = false , features = ["rustls-tls","json"]}
rss = "2.0.0"
thiserror = "1.0.30"
tower = "0.4.12"
axum = { version = "0.4.8" }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }

[profile.release]
lto = true
codegen-units = 1

# cross build -Z build-std --release --target=x86_64-unknown-linux-musl
